# fon

./: .gitignore  .oxlintrc.json  Cargo.toml  README.md  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  uno.config.ts
.github/workflows/: release.yml
app/: app.config.ts  app.vue  router.options.ts
app/assets/styles/: main.css
app/components/: Collapsible.vue  TagView.vue  TitleBar.vue  TodoAddInput.vue  TodoCalendar.vue  TodoDetail copy.vue  TodoDetail.vue  TodoListItem.vue  TodoNavbar.vue  TodoTagInput.vue
app/components/Dialog/: Alert.vue  Confirm.vue  Custom.vue
app/components/TodoContentEditor/: CustomFile.ts  CustomImage.ts  FileNode.vue  FileUpload.ts  FileUploadNode.vue  ImageNode.vue  ImageUpload.ts  ImageUploadNode.vue  LinkPopover.vue  index.vue
app/components/TodoContentEditor/composables/: useEditorSuggestions.ts  useEditorToolbar.ts  useFileUploadHandler.ts
app/components/TodoTitleInput/: TodoTitleInputTagMenu.vue  index.vue  useChannelMention.ts  utils.ts
app/components/tag-view/: types.ts
app/components/tag-view/src/: tag-view.vue
app/components/title-bar/: index.ts
app/components/todo-list/src/: add-input.vue  todo-list-item.vue
app/components/todo-list/src/utils/: view-template-list.ts
app/components/todo-list/src/view-templates/: view-template-deleted.vue  view-template-normal.vue
app/composables/: useDialog.ts  useTodoList.ts
app/db/: index.ts  tags.ts  todos.ts
app/layouts/: default.vue
app/pages/: [...path].vue  index.vue  main.vue
app/pages/main/: tasks.vue  todo.vue
app/pages/main/todo/: all.vue  deleted.vue
app/pages/main/todo/tag/: [tagName].vue
app/services/: todo.ts
app/store/: setting.ts  tag.ts  todo.ts
app/types/: index.ts
app/utils/: file.ts  path.ts  upload.ts
apps/client/: nuxt.config.ts  package.json  uno.config.ts
apps/client/app/assets/styles/: main.css
apps/client/app/components/: provider.vue
apps/client/app/components/tag-view/: index.ts
apps/client/app/components/tag-view/src/: tag-view.vue
apps/client/app/components/title-bar/: index.ts
apps/client/app/components/title-bar/src/: index.vue  title-bar.vue
apps/client/app/components/todo-list/: index.ts
apps/client/app/components/todo-list/src/: add-input.vue  todo-list-item.vue  todo-list.vue
apps/client/app/composables/: useTodoList.ts
apps/client/app/layouts/: default.vue
apps/client/app/pages/: main.vue
apps/client/app/pages/main/: index.vue  tasks.vue
apps/client/app/pages/main/modules/: add-input.vue  todo-detail.vue  todo-filter.vue  todo-list-item.vue  todo-list.vue
apps/client/app/services/: todo.ts
apps/client/app/store/: todo.ts
apps/client/app/types/: index.ts
apps/client/app/utils/: api.ts  color.ts
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/examples/: todo_filter_example.md
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/src/: cmds.rs  feat.rs  lib.rs  main.rs
apps/client/src-tauri/src/database/: commands.rs  mod.rs  response.rs
apps/client/src-tauri/src/database/todo/: mod.rs  models.rs  repository.rs  schema.rs
apps/client/src-tauri/src/utils/: resolve.rs
scripts/: publish-version.mjs  release-version.mjs
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json  tauri.windows.conf.json  webview2.x64.json
src-tauri/capabilities/: default.json  default.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/core/: handle.rs  tray.rs
src-tauri/src/database/: pagination.rs
src-tauri/src/database/todo/: mod.rs
src-tauri/src/utils/: resolve.rs
