[package]
name = "fon"
version = "0.0.4-beta.1"
description = "A Todo App"
authors = [ "mHaoza" ]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fon_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "protocol-asset",
  "tray-icon"
] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = [ "derive" ] } # Rust 序列化/反序列化库
serde_json = "1" # JSON 序列化/反序列化库
anyhow = "1.0.95" # 错误处理
parking_lot = "0.12.3" # 线程同步
once_cell = "1.20.2" # 单例模式
uuid = { version = "1.0", features = [
  "v4",
  "serde"
] }
rbatis = "4.6.8" # ORM 库
rbdc-sqlite = "4.6.1" # SQLite 驱动库
chrono = { version = "0.4.42", features = [ "serde" ] } # 日期时间库
tokio = "1.47.1" # 异步 IO 库
rbs = "4.6.2" # rbatis的serde序列化trait实现

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2.3"

# [profile.dev]
# incremental = true # 以较小的步骤编译您的二进制文件。

# [profile.release]
# codegen-units = 1 # 允许 LLVM 执行更好的优化。
# lto = true # 启用链接时优化。
# opt-level = "s" # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
# panic = "abort" # 通过禁用 panic 处理程序来提高性能。
# strip = true # 确保移除调试符号。
