[package]
name = "fon"
version = "0.0.5-beta.4"
description = "A Todo App"
authors = ["mHaoza"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] } # Tauri构建依赖

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] } # Tauri
tauri-plugin-opener = "2"                                             # 打开外部链接
tauri-plugin-fs = "2"                                                 # 文件系统
tauri-plugin-sql = { version = "2", features = ["sqlite"] }           # 数据库
anyhow = "1.0.95"                                                     # 错误处理
parking_lot = "0.12.3"                                                # 线程同步
once_cell = "1.20.2"                                                  # 单例模式

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2" # 全局快捷键
tauri-plugin-single-instance = "2" # 单实例

[profile.dev]
incremental = true # 以较小的步骤编译您的二进制文件。

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true        # 启用链接时优化。
opt-level = "s"   # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort"   # 通过禁用 panic 处理程序来提高性能。
strip = true      # 确保移除调试符号。
