[package]
name = "fon"
version = "0.0.1-beta.1"
description = "A Todo App"
authors = [ "mHaoza" ]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fon_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon" ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.95"
parking_lot = "0.12.3"
once_cell = "1.20.2"
uuid = { version = "1.0", features = [
  "v4",
  "serde"
] }
rbatis = "4.6.8"
rbdc-sqlite = "4.6.1"
chrono = "0.4.42"
tokio = "1.47.1"
rbs = "4.6.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2.3"
